# GradeWise-AI

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/routes/: alerts.py  analytics.py  auth.py  knowledge.py  monitoring.py  predictions.py  recommendations.py  whatif.py
backend/app/core/: config.py  logging.py  security.py
backend/app/ml/data/: synthetic_generator.py
backend/app/ml/explainability/: explainer.py
backend/app/ml/models/: registry.py  train.py
backend/app/ml/pipeline/: feature_engineering.py  recommendation_engine.py
backend/app/models/: database.py  models.py
backend/app/repositories/: base.py  repositories.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py
data/synthetic/: dataset_summary.json  paper_grades.csv
docker/: nginx.conf
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/explainability/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/predictions/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/recommendations/: page.tsx
frontend/src/lib/: utils.ts
frontend/src/store/: appStore.ts
(+6 files in other folders)
